samples/_failures_safe/1761092854_1f5120_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_40798182.c: In function ‘main’:
./samples/SAFE/__tmp_40798182.c:151:13: error: expected ‘=’, ‘,’, ‘;’, ‘asm’ or ‘__attribute__’ at end of input
  151 |             int result
      |             ^~~
./samples/SAFE/__tmp_40798182.c:151:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_40798182.c:151:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_40798182.c:151:13: error: expected declaration or statement at end of input
